# ls-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
ls_bot/: bot.py
